--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -89,3 +89,4 @@ Save
 <!-- <input type="text" [appInputForm]="'uppercase'" > -->
 <!-- <contact-form></contact-form> -->
 <signup-form></signup-form>
+<new-course-form></new-course-form>
