working on errors

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -88,5 +88,6 @@ Save
 </Span> -->
 <!-- <input type="text" [appInputForm]="'uppercase'" > -->
 <!-- <contact-form></contact-form> -->
-<signup-form></signup-form>
-<new-course-form></new-course-form>
+<!-- <signup-form></signup-form>
+    <new-course-form></new-course-form> -->
+<app-posts></app-posts>
