--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,1 +1,13 @@
-<p>posts works!</p>
+<ul>
+    
+    <input (keyup.enter)="createPost(input)" #input >
+    <li
+    *ngFor="let post of posts"
+    class="list-group-item">
+    <button 
+    (click)="deletePost(post)"
+    class="btn btn-default btn-sm">update</button>
+    {{post.title}}
+
+    </li>
+</ul>
