Phase 2 : Routing/Config  multiple component to project Youssfi followers

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -90,4 +90,6 @@ Save
 <!-- <contact-form></contact-form> -->
 <!-- <signup-form></signup-form>
     <new-course-form></new-course-form> -->
-<app-posts></app-posts>
+<!-- <app-posts></app-posts> -->
+<navbar></navbar>
+<router-outlet></router-outlet>
