--- a/src/app/signup-form/signup-form.component.html
+++ b/src/app/signup-form/signup-form.component.html
@@ -1,4 +1,4 @@
-<!-- reactive forms -->
+<!-- reactive forms
 <form [formGroup]="form">
         <div formGroupName="account">
             <div class="form-group">
@@ -7,9 +7,9 @@
                 formControlName="username"
                     id="username" 
                     type="text" 
-                    class="form-control">
+                    class="form-control"> -->
                     <!-- showing loader while fetching data from the server  -->
-                    <div *ngIf="username!.pending" >checking for uniqueness </div>
+                    <!-- <div *ngIf="username!.pending" >checking for uniqueness </div>
                 <div *ngIf="username!.touched && username!.invalid" class="alert alert-danger">
                     <div *ngIf="username!.errors!.required" >is required </div>
                     <div *ngIf="username!.errors!.minlength" >Username should be minimum {{username!.errors!.minlength.requiredLength}} characters.</div>
@@ -28,4 +28,4 @@
             </div>
         </div>
     <button class="btn btn-primary" type="submit">Sign Up</button>
-</form>
+</form> -->
