--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,4 +1,4 @@
-<form #f="ngForm" (ngSubmit)='submit(f)' >
+<!-- <form #f="ngForm" (ngSubmit)='submit(f)' >
     <div ngModelGroup="contact" #contact="ngModelGroup">
         <div *ngIf="!contact.valid">....</div>
         <div class="form-group">
@@ -70,4 +70,4 @@
     {{f.value | json}}    
 </p>
 <button class="btn btn-primary" [disabled]="!f.valid">submit</button>
-</form>
+</form> -->
