just some fixing

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <ul class="nav">
   <li class="nav-item">
-    <a class="nav-link active" href="#">Followers</a>
+    <a class="nav-link active" routerLink="/followers">Followers</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Posts</a>
+    <a class="nav-link" routerLink="/posts ">Posts</a>
   </li>
 </ul>
