--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -9,5 +9,6 @@
       (click)="deletePost(post)"
       class="btn btn-default btn-sm">Delete</button>
     {{ post.title }}
+    {{ post.id }}
   </li>
 </ul>
