--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
-<ul class="nav">
-  <li class="nav-item">
-    <a class="nav-link active" routerLink="/followers">Followers</a>
+<ul class="nav nav-tabs ">
+  <li routerLinkActive="active">
+    <a class="nav-link " routerLink="/followers">Followers</a>
   </li>
-  <li class="nav-item">
+  <li  routerLinkActive="active">
     <a class="nav-link" routerLink="/posts">Posts</a>
   </li>
 </ul>
